--- a/0515week11.ipynb
+++ b/0515week11.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0515week11.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOcZdmDJPspaPP+xY8g5acg",
+      "authorship_tag": "ABX9TyOABfX3s6yElMsEEtAa3wP9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,12 +80,12 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 236
+          "height": 51
         },
-        "outputId": "8615e1ee-9f1d-41e5-ee92-a83d3689ddf9"
+        "outputId": "a69843f1-a298-4179-a0e9-45dbb1f10b46"
       },
       "source": [
-        "living_area_dict={\n",
+        "living_cost_dict={\n",
         "    \"台北市\":17005,\n",
         "    \"新北市\":15500,\n",
         "    \"桃園市\":15281,\n",
@@ -96,27 +96,19 @@
         "    \"金門連江縣\":11684\n",
         "}\n",
         "\n",
-        "input(\"請輸入居住城市:\")\n"
+        "living_area=input(\"請輸入居住城市:\")\n",
+        "living_cost=living_cost_dict[living_area]\n",
+        "print(\"{}的每人每月最低生活費為{:,}\".format(living_area,living_cost))"
       ],
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "{'台北市': 17005, '新北市': 15500, '桃園市': 15281, '台中市': 14596, '台南市': 12388, '高雄市': 13099, '非六都城市': 12388, '金門連江縣': 11684}\n"
+            "請輸入居住城市:台北市\n",
+            "台北市的每人每月最低生活費為17,005\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-8c59973a53a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m }\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"請輸入居住城市:\"\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mliving_area_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'str' object is not callable"
-          ]
         }
       ]
     },
@@ -125,10 +117,123 @@
       "metadata": {
         "id": "M9QK6rUNLtY0",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "14f24aea-d862-445f-ddff-6830bdc89a64"
+      },
+      "source": [
+        "#處理keyError，像是輸入\"花蓮市\"時\n",
+        "living_cost_dict={\n",
+        "    \"台北市\":17005,\n",
+        "    \"新北市\":15500,\n",
+        "    \"桃園市\":15281,\n",
+        "    \"台中市\":14596,\n",
+        "    \"台南市\":12388,\n",
+        "    \"高雄市\":13099,\n",
+        "    \"非六都城市\":12388,\n",
+        "    \"金門連江縣\":11684\n",
+        "}\n",
+        "living_area=input(\"請輸入你居住的縣市:\")\n",
+        "try:\n",
+        "  living_cost=living_cost_dict[living_area]\n",
+        "  print(\"{}的每人每月最低生活費為{:,}\".format(living_area,living_cost))\n",
+        "except KeyError:\n",
+        "  print(\"!!!請重新輸入你的居住城市!!!\")\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入你居住的縣市:花蓮市\n",
+            "!!!請重新輸入你的居住城市!!!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ROX0tLx4Rrej",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "39f0ec9d-10bd-485f-f634-2ed9e3845c2b"
+      },
+      "source": [
+        "primes_list=[2,3,3,5,5]\n",
+        "\n",
+        "print(primes_list)\n",
+        "set(primes_list)  #set的特性刪減掉重複的字"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[2, 3, 3, 5, 5]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{2, 3, 5}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jjT5DaOVWsAs",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "primes={2,3,5,7,11}\n",
+        "odds={2,4,6,8,12}"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cfSlF5A6Xb20",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#原生的資料結構\n",
+        "#交集\n",
+        "# (1)&\n",
+        "primes&odds\n",
+        "# (2).intersection\n",
+        "primes.intersation(odds)\n",
+        "#聯集\n",
+        "# (1)|\n",
+        "# (2).union\n",
+        "#差異\n",
+        "#(1) -\n",
+        "print(primes - odds)\n",
+        "print(odds - primes)\n",
+        "#(2).differnce\n",
+        "#對稱差異\n",
+        "(primes - odds) | (odds - primes)\n",
+        "#(1) ^\n",
+        "#(2) .symmetric_difference\n"
       ],
       "execution_count": 0,
       "outputs": []
